--- a/packaging/hudi-utilities-bundle/pom.xml
+++ b/packaging/hudi-utilities-bundle/pom.xml
@@ -165,6 +165,56 @@
                   <include>org.apache.curator:curator-recipes</include>
                   <include>commons-codec:commons-codec</include>
                   <include>commons-io:commons-io</include>
+
+	          <!-- pramod -->
+                        <include>com.google.cloud:google-cloud-pubsub</include>
+                        <include>com.google.api.grpc:proto-google-cloud-pubsub-v1</include>
+			<include>io.grpc:grpc-api</include>
+			<include>io.grpc:grpc-context</include>
+			<include>io.grpc:grpc-stub</include>
+			<include>io.grpc:grpc-protobuf</include>
+			<include>io.grpc:grpc-protobuf-lite</include>
+			<include>com.google.api:api-common</include>
+			<include>javax.annotation:javax.annotation-api</include>
+			<include>com.google.api.grpc:proto-google-common-protos</include>
+			<include>com.google.auth:google-auth-library-oauth2-http</include>
+			<include>com.google.auth:google-auth-library-credentials</include>
+			<include>com.google.http-client:google-http-client-gson</include>
+			<include>com.google.api.grpc:proto-google-cloud-pubsub-v1</include>
+			<include>com.google.api.grpc:proto-google-iam-v1</include>
+			<include>com.google.guava:failureaccess</include>
+			<include>com.google.guava:listenablefuture</include>
+			<include>org.checkerframework:checker-qual</include>
+			<include>com.google.j2objc:j2objc-annotations</include>
+			<include>com.google.api:gax</include>
+			<include>com.google.api:gax-grpc</include>
+			<include>io.grpc:grpc-alts</include>
+			<include>io.grpc:grpc-grpclb</include>
+			<include>org.conscrypt:conscrypt-openjdk-uber</include>
+			<include>io.grpc:grpc-auth</include>
+			<include>io.grpc:grpc-netty-shaded</include>
+			<include>io.grpc:grpc-googleapis</include>
+			<include>io.grpc:grpc-xds</include>
+			<include>io.grpc:grpc-services</include>
+			<include>com.google.re2j:re2j</include>
+			<include>io.opencensus:opencensus-proto</include>
+			<include>com.google.api:gax-httpjson</include>
+			<include>com.google.protobuf:protobuf-java-util</include>
+			<include>org.threeten:threetenbp</include>
+			<include>io.opencensus:opencensus-api</include>
+			<include>io.grpc:grpc-core</include>
+			<include>com.google.android:annotations</include>
+			<include>org.codehaus.mojo:animal-sniffer-annotations</include>
+			<include>io.perfmark:perfmark-api</include>
+			<include>com.google.errorprone:error_prone_annotations</include>
+			<include>com.google.auto.value:auto-value-annotations</include>
+			<include>com.google.http-client:google-http-client</include>
+			<include>io.opencensus:opencensus-contrib-http-util</include>
+
+			<!-- Also adding -->
+			<include>com.google.protobuf:protobuf-java</include>
+			<include>com.google.guava:guava</include>
+			  
                 </includes>
               </artifactSet>
               <relocations>
@@ -462,6 +512,17 @@
       <artifactId>curator-recipes</artifactId>
       <version>${zk-curator.version}</version>
     </dependency>
+
+  <!-- pramod : Following template in trino and presto -->
+    <!--Guava needs to be shaded because HBase 1.2.3 depends on an earlier guava version i.e 12.0.1 and hits runtime
+    issues with the guava version present in utilities runtime-->
+    <dependency>
+      <groupId>com.google.guava</groupId>
+      <artifactId>guava</artifactId>
+      <version>12.0.1</version>
+      <scope>provided</scope>
+    </dependency>	  
+
   </dependencies>
 
   <profiles>
