--- a/hudi-utilities/pom.xml
+++ b/hudi-utilities/pom.xml
@@ -60,6 +60,10 @@
         <groupId>org.apache.rat</groupId>
         <artifactId>apache-rat-plugin</artifactId>
       </plugin>
+
+      <!-- Temp hack to be able to exec a single Java class in multi-module maven project.
+      Ref: https://stackoverflow.com/a/26448447/700045running-a-specific-maven-plugin-goal-from-the-command-line-in-a-sub-module-of-a/26448447#26448447
+      -->
       <plugin>
         <groupId>org.codehaus.mojo</groupId>
         <artifactId>exec-maven-plugin</artifactId>
