--- a/packaging/hudi-utilities-bundle/pom.xml
+++ b/packaging/hudi-utilities-bundle/pom.xml
@@ -166,7 +166,8 @@
                   <include>commons-codec:commons-codec</include>
                   <include>commons-io:commons-io</include>
 
-	          <!-- pramod -->
+	          <!-- pramod: Adding cloud pubsub and its dependencies manually to be included for Shading.
+	           In an attempt to get this working on local docker env -->
                         <include>com.google.cloud:google-cloud-pubsub</include>
                         <include>com.google.api.grpc:proto-google-cloud-pubsub-v1</include>
 			<include>io.grpc:grpc-api</include>
@@ -210,7 +211,6 @@
 			<include>com.google.auto.value:auto-value-annotations</include>
 			<include>com.google.http-client:google-http-client</include>
 			<include>io.opencensus:opencensus-contrib-http-util</include>
-
 			<!-- Also adding -->
 			<include>com.google.protobuf:protobuf-java</include>
 			<include>com.google.guava:guava</include>
